Fixed couple things and added logo

--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chezzies's Bait Shop - Disney, Oklahoma | Gas Station & Fishing Tackle</title>
+    <meta name="description" content="Chezzies's Bait Shop in Disney, Oklahoma - Your one-stop shop for fishing tackle, gas station services, boat accessories, and convenience items.">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <link rel="stylesheet" href="style.css">
         <nav class="container">
-            <div class="logo">🎣 Chezzies's Bait Shop</div>
+            <div class="logo">
+                <img src="pic/logo.png" alt="Chezzies's Bait Shop Logo" class="logo-img">
+                <span class="logo-text">Chezzies's Bait Shop</span>
+            </div>
             <ul class="nav-links">
                 <li><a href="#services">Services</a></li>
-                <li><a href="#prices">Prices</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -26,23 +33,23 @@
 
     <div class="container">
         <div class="gas-prices">
-            <h3>⛽ Current Gas Prices</h3>
+            <h3>⛽ Chezzies's Disney Gas Station</h3>
             <div class="gas-grid">
                 <div class="gas-item">
                     <div>Regular</div>
-                    <div class="gas-price" id="regular-price">$3.29</div>
+                    <div class="gas-price">Available</div>
                 </div>
                 <div class="gas-item">
                     <div>Mid-Grade</div>
-                    <div class="gas-price" id="mid-price">$3.49</div>
+                    <div class="gas-price">Available</div>
                 </div>
                 <div class="gas-item">
                     <div>Premium</div>
-                    <div class="gas-price" id="premium-price">$3.69</div>
+                    <div class="gas-price">Available</div>
                 </div>
                 <div class="gas-item">
                     <div>Diesel</div>
-                    <div class="gas-price" id="diesel-price">$3.89</div>
+                    <div class="gas-price">Available</div>
                 </div>
             </div>
         </div>
@@ -57,7 +64,7 @@
                 </div>
                 <div class="service-card">
                     <div class="service-icon">⛽</div>
-                    <h3>One Stop Gas Station</h3>
+                    <h3>Chezzies's Disney Gas Station</h3>
                     <p>Full-service gas station with competitive prices on regular, premium, and diesel fuel for your convenience.</p>
                 </div>
                 <div class="service-card">
@@ -66,7 +73,7 @@
                     <p>Wide range of food and beverage selection plus everyday essentials for locals and travelers alike.</p>
                 </div>
                 <div class="service-card">
-                    <div class="service-icon">🚤</div>
+                    <div class="service-icon">🛶</div>
                     <h3>Boat Accessories</h3>
                     <p>Marine supplies and boat accessories to keep you ready for your next adventure on the water.</p>
                 </div>
@@ -83,43 +90,12 @@
             </div>
         </section>
 
-        <section id="prices" class="section">
-            <h2>Tackle & Convenience Prices</h2>
-            <div class="price-grid">
-                <div class="price-item">
-                    <span>Fishing Line (100yd)</span>
-                    <span class="price">$12.99</span>
-                </div>
-                <div class="price-item">
-                    <span>Hook Sets</span>
-                    <span class="price">$4.50</span>
-                </div>
-                <div class="price-item">
-                    <span>Lure Assortment</span>
-                    <span class="price">$8.25</span>
-                </div>
-                <div class="price-item">
-                    <span>Sinker Weights</span>
-                    <span class="price">$3.75</span>
-                </div>
-                <div class="price-item">
-                    <span>Fishing License</span>
-                    <span class="price">$32.00</span>
-                </div>
-                <div class="price-item">
-                    <span>Ice (20 lb bag)</span>
-                    <span class="price">$3.00</span>
-                </div>
-            </div>
-        </section>
-
         <section id="contact" class="section">
             <h2>Visit Us Today</h2>
             <div class="hours">
                 <h3>🕐 Store Hours</h3>
                 <p><strong>Mon-Fri:</strong> 5:00 AM - 9:00 PM</p>
                 <p><strong>Sat-Sun:</strong> 4:00 AM - 10:00 PM</p>
-                <p><em>Open early for the early birds!</em></p>
             </div>
             <div class="contact-info">
                 <div class="contact-card">
@@ -132,20 +108,15 @@
                     <h3>Phone</h3>
                     <p>(918) 435-2491<br>(512) 579-8266</p>
                 </div>
-                <div class="contact-card">
-                    <div class="contact-icon">✉️</div>
-                    <h3>Email</h3>
-                    <p>info@chezziesbaitshop.com</p>
-                </div>
             </div>
         </section>
     </div>
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Chezzies's Bait Shop. All rights reserved. | Serving Disney, Oklahoma with pride</p>
+            <p>&copy; 2025 Chezzies's Bait Shop & Chezzies's Disney Gas Station. All rights reserved. | Serving Disney, Oklahoma with pride</p>
         </div>
     </footer>
     <script src="home.js"></script>
-  </body>
+</body>
 </html>
