fixed background and readabliity

--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
                 <div class="contact-card">
                     <div class="contact-icon">📍</div>
                     <h3>Location</h3>
-                    <p>103 N Main Street<br>Disney, Oklahoma 74340</p>
+                    <p><a href="https://maps.google.com/?q=103+N+Main+Street,+Disney,+Oklahoma+74340" target="_blank" rel="noopener noreferrer" class="location-link">103 N Main Street<br>Disney, Oklahoma 74340</a></p>
                 </div>
                 <div class="contact-card">
                     <div class="contact-icon">📞</div>
                     <h3>Phone</h3>
-                    <p>(918) 435-2491<br>(512) 579-8266</p>
+                    <p><a href="tel:+19184352491" class="phone-link">(918) 435-2491</a><br><a href="tel:+15125798266" class="phone-link">(512) 579-8266</a></p>
                 </div>
             </div>
         </section>
